package com.spark.social

val profileChoices:Map<String,List<String>> = mapOf(
 "category" to listOf("Digital creator","Content creator","Artist","Musician","Entrepreneur","Blogger","Video creator","Photographer","Writer","Gamer","Public figure","Education","Web developer","Designer","Business owner","Student"),
 "ai_creator" to listOf("Yes","No"),
 "gender" to listOf("Male","Female","Non-binary","Prefer not to say"),
 "relationship" to listOf("Single","In a relationship","Engaged","Married","In a civil partnership","In a domestic partnership","In an open relationship","It's complicated","Separated","Divorced","Widowed","Prefer not to say"),
 "languages" to listOf("Bangla","English","Hindi","Urdu","Arabic","Spanish","French","German","Portuguese","Chinese","Japanese","Korean","Tamil","Turkish","Italian","Russian"),
 "work" to listOf("Self-employed","Freelance","Upwork","Fiverr","Google","Microsoft","Meta","Amazon","BRAC","Grameenphone","Banglalink","Robi","bKash","Nagad"),
 "education" to listOf("National University of Bangladesh","University of Dhaka","Jahangirnagar University","University of Rajshahi","University of Chittagong","Bangladesh University of Engineering and Technology","North South University","BRAC University","Daffodil International University","Bangladesh Open University"),
...
